# way-edges

./: .gitattributes  .gitignore  .neoconf.json  Cargo.toml  LICENSE  PKGBUILD  README.md  aaa.json  debug.bash  default.nix  flake.nix  rd.sh  temp  test_config.jsonc  test_schema.json  way-edges-bash-complete.bash
.cargo/: config.toml
.github/workflows/: build_release.yaml
config/: .gitignore  config.jsonc  config.schema.json  defs.schema.json  minify.sh
config_examples/: README.md  all_in_one.jsonc  root.json  schema.json  schema.json.bak
crates/backend/: Cargo.toml
crates/backend/src/: config_file_watch.rs  hypr_workspace.rs  lib.rs  monitor.rs  runtime.rs  system.rs
crates/backend/src/backlight/: dbus.rs  mod.rs  watch.rs
crates/backend/src/ipc/: listen.rs  mod.rs
crates/backend/src/niri_workspace/: mod.rs
crates/backend/src/pulseaudio/: change.rs  mod.rs  pa.rs
crates/backend/src/tray/: context.rs  event.rs  icon.rs  item.rs  mod.rs
crates/backend/src/tray/icon/: custom.rs  freedesktop.rs  mod.rs
crates/backend/src/workspace/: hypr.rs  hypr_workspace.rs  mod.rs
crates/backend/src/workspace/niri/: connection.rs  mod.rs
crates/backend/src/workspace/niri_workspace/: mod.rs
crates/config/: Cargo.toml  debug.kdl  example.kdl
crates/config/src/: common.rs  conf.rs  lib.rs  main.rs  root.rs  shared.rs
crates/config/src/def/: common.rs  mod.rs  shared.rs  util.rs
crates/config/src/def/widgets/: button.rs  workspace.rs
crates/config/src/def/widgets/slide/: base.rs  mod.rs  preset.rs
crates/config/src/def/widgets/wrapbox/: mod.rs  ring.rs  text.rs  tray.rs
crates/config/src/kdl/: common.rs  mod.rs  shared.rs  util.rs
crates/config/src/kdl/widgets/: button.rs  mod.rs  workspace.rs
crates/config/src/kdl/widgets/slide/: base.rs  preset.rs
crates/config/src/kdl/widgets/wrapbox/: mod.rs  ring.rs  text.rs  tray.rs
crates/config/src/serde/: common.rs  mod.rs  widgets.rs
crates/config/src/serde/widgets/: button.rs  workspace.rs
crates/config/src/serde/widgets/slide/: base.rs  preset.rs
crates/config/src/serde/widgets/wrapbox/: mod.rs  ring.rs  text.rs  tray.rs
crates/config/src/widgets/: backlight.rs  button.rs  hypr_workspace.rs  mod.rs  pulseaudio.rs  slide.rs  workspace.rs
crates/config/src/widgets/slide/: base.rs  mod.rs  preset.rs
crates/config/src/widgets/wrapbox/: mod.rs  ring.rs  text.rs  tray.rs
crates/derive-debug/: Cargo.toml
crates/frontend/: Cargo.toml
crates/frontend/src/: buffer.rs  frame.rs  lib.rs  mouse_state.rs
crates/frontend/src/animation/: base.rs  list.rs  mod.rs
crates/frontend/src/wayland/: app.rs  draw.rs  implement.rs  mainloop.rs  mod.rs  window_pop_state.rs
crates/frontend/src/widgets/: mod.rs
crates/frontend/src/widgets/button/: draw.rs  event.rs  mod.rs
crates/frontend/src/widgets/hypr_workspace/: draw.rs  event.rs  mod.rs
crates/frontend/src/widgets/hypr_workspace/old/: draw.rs  mod.rs
crates/frontend/src/widgets/slide/: draw.rs  event.rs  mod.rs
crates/frontend/src/widgets/slide/backlight/: mod.rs
crates/frontend/src/widgets/slide/base/: custom.rs  draw.rs  event.rs  mod.rs
crates/frontend/src/widgets/slide/base/font/: mod.rs  raw.rs
crates/frontend/src/widgets/slide/custom/: mod.rs
crates/frontend/src/widgets/slide/font/: mod.rs  raw.rs
crates/frontend/src/widgets/slide/pulseaudio/: event.rs  mod.rs
crates/frontend/src/widgets/workspace/: draw.rs  event.rs  mod.rs
crates/frontend/src/widgets/wrapbox/: box_traits.rs  event.rs  mod.rs
crates/frontend/src/widgets/wrapbox/grid/: builder.rs  item.rs  mod.rs
crates/frontend/src/widgets/wrapbox/old/: draw.rs  mod.rs
crates/frontend/src/widgets/wrapbox/old/display/: grid.rs
crates/frontend/src/widgets/wrapbox/old/outlook/: window.rs
crates/frontend/src/widgets/wrapbox/outlook/: board.rs  mod.rs  window.rs
crates/frontend/src/widgets/wrapbox/widgets/: mod.rs
crates/frontend/src/widgets/wrapbox/widgets/ring/: draw.rs  mod.rs  preset.rs
crates/frontend/src/widgets/wrapbox/widgets/text/: draw.rs  mod.rs
crates/frontend/src/widgets/wrapbox/widgets/tray/: draw.rs  item.rs  layout.rs  mod.rs  module.rs
crates/frontend/src/window/: builder.rs  context.rs  draw.rs  event.rs  frame.rs  mod.rs
crates/ipc/: Cargo.toml
crates/util/: Cargo.toml
crates/util/src/: color.rs  draw.rs  lib.rs
crates/util/src/template/: arg.rs  base.rs  mod.rs
crates/util/src/template/arg/: float.rs  mod.rs  ring_preset.rs
crates/util/src/text/: draw.rs  mod.rs  slide_font.rs
crates/way-edges/: Cargo.toml
crates/way-edges-derive/: Cargo.toml
crates/way-edges/src/: args.rs  common.rs  daemon.rs  main.rs
crates/way-edges/src/activate/: group.rs  mod.rs  monitor.rs  widget_map.rs
crates/way-edges/src/ui/: window.rs
crates/way-edges/src/ui/draws/: blur.rs  mod.rs  mouse_state.rs  util.rs
crates/way-edges/src/ui/draws/font/: mod.rs
crates/way-edges/src/ui/widgets/: mod.rs
crates/way-edges/src/ui/widgets/backlight/: mod.rs
crates/way-edges/src/ui/widgets/button/: draw.rs  event.rs  mod.rs
crates/way-edges/src/ui/widgets/hypr_workspace/: event.rs  mod.rs
crates/way-edges/src/ui/widgets/pulseaudio/: mod.rs
crates/way-edges/src/ui/widgets/ring/: draw.rs  mod.rs
crates/way-edges/src/ui/widgets/slide/: event.rs  mod.rs  pre_draw.rs
crates/way-edges/src/ui/widgets/text/: mod.rs
crates/way-edges/src/ui/widgets/tray/: draw.rs  layout.rs  mod.rs  module.rs
crates/way-edges/src/ui/widgets/wrapbox/: expose.rs  mod.rs
crates/way-edges/src/ui/widgets/wrapbox/display/: grid.rs
debug/: .gitignore  debug.jsonc
doc/: cmd.md  install.md
doc/config/: README.md  all_in_one.jsonc  all_in_one.kdl  root.md  schema.json  widget.md
doc/notes/: how_pop_is_implemented.md
src/: activate.bak  activate.rs  args.rs  common.rs  config.rs  daemon.rs  data.rs  file_watch.rs  hyprland.bak  ipc_command.rs  main.rs
src/activate/: default.rs  group.rs  hyprland.rs  mod.rs  monitor.rs  widget_map.rs
src/config/: conf.rs  mod.rs  parse.rs  raw.rs  test.rs  util.rs
src/plug/: mod.rs  (+4 more)
way-edges-derive/: .gitignore  Cargo.toml
(+92 files in other folders)
