[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]

way-edges-derive = { version = "0.1.0", path = "crates/way-edges-derive" }
config = { version = "0.1.0", path = "crates/config" }
util = { version = "0.1.0", path = "crates/util" }
backend = { version = "0.1.0", path = "crates/backend" }
frontend = { version = "0.1.0", path = "crates/frontend" }


cosmic-text = { git = "https://github.com/pop-os/cosmic-text", branch = "main", features = [
  "shape-run-cache",
] }
cairo-rs = { version = "0.20", default-features = false, features = [
  "freetype",
  "freetype-rs",
  "png",
] }

thiserror = "2.0.11"
regex-lite = "0.1.6"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
paste = "1.0.15"
serde_jsonrc = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["net", "macros", "rt", "time", "sync"] }
async-channel = "2.3"
system-tray = { git = "https://github.com/ogios/system-tray-zbus5.git", branch = "zbus5" }

# until it make calloop version 0.14
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git" }
wayland-client = "0.31.7"
calloop = "0.14.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 4
strip = true      # Strip symbols from binary*
