[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
util.workspace = true
config.workspace = true

gio.workspace = true
gtk.workspace = true
log.workspace = true
async-channel.workspace = true
tokio.workspace = true
cairo.workspace = true
lazy_static.workspace = true
system-tray.workspace = true
serde_jsonrc.workspace = true
serde.workspace = true
calloop.workspace = true


hyprland = { version = "0.4.0-beta.2", default-features = false, features = [
  "data",
  "tokio",
  "listener",
] }
libpulse-binding = "2.28"
libpulse-glib-binding = "2.28.1"
zbus = "5.0"
blight = "0.7"
inotify = "0.11.0"
futures-util = "0.3.31"

notify = { version = "7.0.0", default-features = false }
notify-debouncer-full = "0.4.0"
sysinfo = { version = "0.33.1", default-features = false, features = [
  "disk",
  "system",
] }
starship-battery = "0.10.0"
