[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
util.workspace = true
config.workspace = true

log.workspace = true
async-channel.workspace = true
tokio.workspace = true
cairo-rs.workspace = true
lazy_static.workspace = true
system-tray.workspace = true
serde_jsonrc.workspace = true
serde.workspace = true
calloop.workspace = true


hyprland = { version = "0.4.0-beta.2", default-features = false, features = [
  "data",
  "tokio",
  "listener",
] }
# libpulse-binding = "2.28"
libpulse-binding = { git = "https://github.com/ogios/pulse-binding-rust.git", branch = "tokio-bindings" }
libpulse-tokio = { git = "https://github.com/ogios/pulse-binding-rust.git", branch = "tokio-bindings" }
zbus = "5.0"
blight = "0.7"
inotify = "0.11.0"
futures-util = "0.3.31"

resvg = { version = "0.44.0", default-features = false }

niri-ipc = "25.1.0"

freedesktop-icons = { git = "https://github.com/ogios/freedesktop-icons", branch = "main" }
linicon-theme = { git = "https://github.com/ogios/linicon-theme.git", branch = "main" }

sysinfo = { version = "0.33.1", default-features = false, features = [
  "disk",
  "system",
] }
starship-battery = "0.10.0"
