[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]

cosmic-text.workspace = true
regex-lite.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
educe.workspace = true
smithay-client-toolkit.workspace = true

way-edges-derive.workspace = true
util.workspace = true

serde_jsonrc.workspace = true
serde.workspace = true

xdg = "2.5"
