[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]

cosmic-text.workspace = true
regex-lite.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
educe.workspace = true
smithay-client-toolkit.workspace = true

way-edges-derive.workspace = true
util.workspace = true

serde_jsonrc.workspace = true
serde.workspace = true
schemars.workspace = true
xdg.workspace = true

serde_json = "1.0.140"

smol_str = "0.2.2"

# knus = { git = "https://github.com/ogios/knus.git", branch = "custom" }
knus.workspace = true

string-to-num = "0.1.2"

miette = { version = "7.2.0", features = ["fancy"] }
