[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-rs.workspace = true
educe.workspace = true
paste.workspace = true
lazy_static.workspace = true
system-tray.workspace = true
cosmic-text.workspace = true

smithay-client-toolkit.workspace = true
wayland-client.workspace = true
calloop.workspace = true

way-edges-derive.workspace = true
config.workspace = true
backend.workspace = true
log.workspace = true
util.workspace = true

timerfd = "1.0"
interval-task = "0.3.4"

chrono = "0.4.38"
chrono-tz = "0.10.0"
