[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
cairo.workspace = true
paste.workspace = true
gdk.workspace = true

cosmic-text = { git = "https://github.com/pop-os/cosmic-text", branch = "main", features = [
  "shape-run-cache",
] }

notify-rust = "4.11"
# downcast-rs = "1.2.1"
downcast-rs = "2.0.1"
