[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
cairo-rs.workspace = true
paste.workspace = true
regex-lite.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
cosmic-text.workspace = true


# downcast-rs = "1.2.1"
downcast-rs = "2.0.1"
