[package]
name = "way-edges"
version = "0.1.0"
edition = "2021"
description = "Hidden widget on screen edges"

[dependencies]
way-edges-derive.workspace = true
util.workspace = true
config.workspace = true
backend.workspace = true
ipc.workspace = true

gtk4-layer-shell.workspace = true
gtk.workspace = true
gio.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
tokio.workspace = true
async-channel.workspace = true

notify = { version = "7.0.0", default-features = false }
notify-debouncer-full = "0.4.0"
interval-task = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5.36", features = ["unstable-dynamic"] }
hyprland = { version = "0.4.0-beta.2", default-features = false, features = [
  "data",
  "tokio",
  "listener",
  "unsafe-impl",
  "async-lite",
] }
cairo-rs = { version = "0.20", features = ["freetype", "freetype-rs", "png"] }
blight = "0.7"
zbus = "5.0"
pangocairo = "0.20"
get_sys_info = "0.1"
tokio-timerfd = "0.2.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
libpulse-binding = "2.28"
libpulse-glib-binding = "2.28.1"
system-tray = { git = "https://github.com/ogios/system-tray-zbus5.git", branch = "zbus5" }
