[package]
name = "way-edges"
version = "0.1.0"
edition = "2021"
description = "Hidden widget on screen edges"

[dependencies]
way-edges-derive.workspace = true
util.workspace = true
config.workspace = true
backend.workspace = true
ipc.workspace = true

gtk4-layer-shell.workspace = true
gtk.workspace = true
gio.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
tokio.workspace = true
async-channel.workspace = true
cairo-rs.workspace = true
system-tray.workspace = true

interval-task = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5.36", features = ["unstable-dynamic"] }
pangocairo = "0.20"
tokio-timerfd = "0.2.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
