[package]
name = "way-edges"
version = "0.1.0"
edition = "2021"
description = "Hidden widget on screen edges"

[dependencies]
way-edges-derive.workspace = true
util.workspace = true
config.workspace = true
backend.workspace = true
frontend.workspace = true

gio.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true

clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5.36", features = ["unstable-dynamic"] }
